.openshift/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
  name: backend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: backend
  wildcardPolicy: None
